<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MiBibliotecaMusical</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_title">Home</string>
    <string name="search_title">Search</string>
    <string name="library_title">Library</string>
    <string name="nueva_playlist">Nueva playlist</string>
    <string name="imagen_del_album">Imagen del album</string>
    <string name="nombre_del_album">Nombre del album</string>
    <string name="nombre_del_artista">Nombre del artista</string>
    <string name="lista">Lista</string>
    <string name="nombre_del_podcast" tools:ignore="ExtraTranslation">Nombre del podcast</string>
    <string name="tus_playlists">Tus Playlists</string>
    <string name="sum_rgete_en_tus_lbumes">Sumérgete en tus Álbumes</string>
    <string name="escucha_los_podcasts_que_te_gustan">Sigue con tus Podcasts</string>
    <string name="imagen_podcast">Imagen Podcast</string>
    <string name="imagen_de_usuario">Imagen de usuario</string>
    <string name="arg_playlist_id">playlistId</string>
    <string name="none" />
    <string name="arg_song_id">songId</string>
    <string name="eliminar">¿Eliminar playlist?</string>
    <string name="image">Image</string>
    <string name="canciones_que_te_gustan">Canciones que te gustan</string>
    <string name="iniciar_sesion_con_twitter">Iniciar sesion con Twitter</string>
    <string name="iniciar_sesion_con_facebook">Iniciar sesion con Facebook</string>
    <string name="iniciar_sesion">Iniciar sesion</string>
    <string name="iniciar_sesion_con_google">Iniciar sesion con Google</string>
    <string name="registrarse">Registrarse</string>
    <string name="cientos_de_canciones_gratis_en_tu_movil">Cientos de canciones Gratis en tu movil</string>
    <string name="imagen">Imagen</string>
    <string name="user_email">User / Email</string>
    <string name="password">Password</string>
    <string name="contrase_a">Contraseña</string>
    <string name="correo_electr_nico_o_usuario">Correo electrónico o usuario</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="usuario">Usuario</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="email">Email</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="g_nero">Género</string>
    <string name="c_digo_postal">Código Postal</string>
    <string name="hombre">Hombre</string>
    <string name="mujer">Mujer</string>
    <string name="pa_s">País</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="select_image">Select Image</string>
    <string name="selecctor_de_imagen">Selecctor de imagen</string>
    <string name="t_tulo">Título</string>
    <string name="arg_songSelected_id">songIdSelected</string>
    <string name="cancelar">Cancelar</string>
    <string name="titulo">Título</string>
    <string name="default_canciones">123 canciones</string>
    <string name="podcasts">Podcasts</string>
    <string name="podcast">Podcast</string>
    <string name="playlists">Playlists</string>
    <string name="albums">Albums</string>
    <string name="album">Álbum</string>
    <string name="nombre">Nombre</string>
    <string name="autor">Autor</string>
    <string name="cancion">Canción</string>
    <string name="registro">Registro</string>
    <string name="mantener_sesi_n_iniciada">Mantener sesión iniciada</string>

</resources>