<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authModule.AuthActivity">
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvMessage"
        android:background="@color/black"
        android:contentDescription="@string/imagen" />



    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cientos_de_canciones_gratis_en_tu_movil"
        android:textAlignment="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/common_max_margin"
        android:layout_marginEnd="@dimen/common_max_margin"
        android:paddingStart="@dimen/common_padding"
        android:paddingEnd="@dimen/common_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMessage"

        android:paddingStart="@dimen/common_padding"
        android:paddingEnd="@dimen/common_padding"
        android:layout_marginTop="@dimen/common_max_margin"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registrarse"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnLogin"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion_con_google"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnRegister"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion_con_facebook"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnGoogle"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTwitter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion_con_twitter"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnFacebook"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            style="@style/Widget.Material3.Button.OutlinedButton"

            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tvMessage"
            android:layout_marginStart="48dp"
            android:layout_marginEnd="48dp"
            style="@style/Widget.Material3.Button.TextButton"
            />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>