<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/item_album_width"
    android:layout_height="@dimen/item_album_height"
    android:paddingEnd="@dimen/common_padding"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:id="@+id/ivAlbum"
        android:layout_width="@dimen/item_album_image"
        android:layout_height="@dimen/item_album_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/imagen_del_album"
        android:background="@color/white"
        />

    <TextView
        android:id="@+id/tvAlbumName"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_min_margin"
        android:maxLines="@integer/max_lines_album_name"
        android:textSize="@dimen/common_text_size"
        android:text="@string/nombre_del_album"
        app:layout_constraintTop_toBottomOf="@id/ivAlbum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"

        />

    <TextView
        android:id="@+id/tvArtistName"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_min_margin"
        android:text="@string/nombre_del_artista"
        app:layout_constraintTop_toBottomOf="@id/tvAlbumName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:maxLines="@integer/max_lines_album_name"
        android:textColor="@color/md_theme_dark_outline"
        />

</androidx.constraintlayout.widget.ConstraintLayout>