<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="136dp"
    android:layout_height="178dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingEnd="@dimen/common_padding"
    >


        <ImageView
            android:id="@+id/ivPlaylist"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/imagen_del_album"
            android:background="@color/white"
            />

        <TextView
            android:id="@+id/tvPlaylistName"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_min_margin"
            android:maxLines="1"
            android:textSize="@dimen/common_text_size"
            android:text="@string/nombre_del_album"
            app:layout_constraintTop_toBottomOf="@id/ivPlaylist"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/tvPlaylistUser"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/common_min_margin"
            android:text="@string/lista"
            app:layout_constraintTop_toBottomOf="@id/tvPlaylistName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:maxLines="1"
            android:textColor="@color/md_theme_dark_outline"
            />

</androidx.constraintlayout.widget.ConstraintLayout>