<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authModule.AuthActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="Iniciar sesión"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            app:navigationIcon="@drawable/ic_arrow"
            app:navigationIconTint="@color/white"
            app:titleCentered="true"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/common_max_margin"
        android:layout_marginEnd="@dimen/common_max_margin"
        android:layout_marginBottom="@dimen/common_margin"
        android:text="@string/correo_electr_nico_o_usuario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tilUser"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_max_margin"
        android:layout_marginEnd="@dimen/common_max_margin"
        android:hint="@string/user_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_max_margin"
        android:layout_marginStart="@dimen/common_max_margin"
        android:layout_marginBottom="@dimen/common_margin"
        android:layout_marginEnd="@dimen/common_max_margin"
        android:text="@string/contrase_a"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilUser"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="@dimen/common_max_margin"
        android:layout_marginEnd="@dimen/common_max_margin"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:endIconCheckable="true"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_max_margin"
        android:text="@string/iniciar_sesi_n"
        android:paddingTop="@dimen/common_padding_min"
        android:paddingBottom="@dimen/common_padding_min"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        android:layout_gravity="center_horizontal"
        />


</LinearLayout>