<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authModule.AuthActivity"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent"
            >

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="Registro"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                app:navigationIconTint="@color/white"
                app:titleCentered="true"
                />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/cbBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/ic_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/appBarLayout"
            app:buttonTint="@android:color/white"
            android:layout_marginStart="@dimen/common_min_margin"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fillViewport="true"
        android:scrollbars="none"
        >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_max_margin"
            android:layout_marginStart="@dimen/common_max_margin"
            android:layout_marginEnd="@dimen/common_max_margin"
            android:text="@string/pa_s"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginStart="@dimen/common_max_margin"
            android:layout_marginEnd="@dimen/common_max_margin"
            android:hint="@string/pa_s"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:id="@+id/actCountry"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textAutoComplete"
                android:padding="8dp"
                android:dropDownWidth="250dp"
                android:dropDownHeight="wrap_content"
                android:dropDownAnchor="@id/actCountry"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/common_max_margin"
            android:layout_marginEnd="@dimen/common_max_margin"
            android:text="@string/nombre_de_usuario"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="@dimen/common_max_margin"
            android:layout_marginEnd="@dimen/common_max_margin"
            android:hint="@string/usuario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="@dimen/common_max_margin"
                android:layout_marginEnd="@dimen/common_max_margin"
                android:text="@string/correo_electr_nico"
                android:textSize="20sp"
                android:textStyle="bold"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="@dimen/common_max_margin"
                android:layout_marginEnd="@dimen/common_max_margin"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    />

            </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/common_max_margin"
            android:layout_marginEnd="@dimen/common_max_margin"
            android:text="@string/contrase_a"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="@dimen/common_max_margin"
            android:layout_marginEnd="@dimen/common_max_margin"
            android:hint="@string/password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:endIconCheckable="true"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="@dimen/common_max_margin"
            android:layout_marginEnd="@dimen/common_max_margin"
            android:text="@string/confirmar_contrase_a"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="@dimen/common_max_margin"
            android:layout_marginEnd="@dimen/common_max_margin"
            android:hint="@string/confirmar_contrase_a"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:endIconCheckable="true"
            app:endIconMode="password_toggle"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_max_margin"
            android:layout_marginStart="@dimen/common_max_margin"
            android:layout_marginEnd="@dimen/common_max_margin"
            android:text="@string/fecha_de_nacimiento"
            android:textSize="20sp"
            android:textStyle="bold"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBirthDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginStart="@dimen/common_max_margin"
            android:layout_marginEnd="@dimen/common_max_margin"
            android:hint="@string/fecha_de_nacimiento"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/ic_calendar"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etBirthDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:focusableInTouchMode="false"
                android:inputType="date"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginBottom="@dimen/common_margin"
            >

            <LinearLayout
                android:id="@+id/llPostalCode"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/common_min_margin"
                android:layout_marginStart="@dimen/common_max_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/llGender"
                >

                <TextView
                    android:id="@+id/tvPostalCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/c_digo_postal"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:hint="@string/c_digo_postal"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPostalCode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />


                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llGender"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                app:layout_constraintStart_toEndOf="@id/llPostalCode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/common_min_margin"
                android:layout_marginStart="@dimen/common_max_margin"
                android:layout_marginEnd="@dimen/common_max_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:ignore="InvalidId">

                <TextView
                    android:id="@+id/tvGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/g_nero"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_vertical"
                    />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cgGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleLine="true"
                    app:singleSelection="true"
                    app:selectionRequired="true"
                    android:layout_marginTop="@dimen/common_margin"
                    >

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipHombre"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hombre"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:chipCornerRadius="8dp"
                        app:closeIconVisible="false"
                        />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipMujer"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mujer"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        app:chipCornerRadius="8dp"
                        app:closeIconVisible="false"
                        />

                </com.google.android.material.chip.ChipGroup>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_margin"
            android:layout_marginStart="@dimen/common_max_margin"
            android:layout_marginEnd="@dimen/common_max_margin"
            android:layout_marginBottom="@dimen/common_max_margin"
            android:text="@string/registrarse"
            android:paddingTop="@dimen/common_padding_min"
            android:paddingBottom="@dimen/common_padding_min"
            android:textSize="14sp"
            android:textStyle="bold"

            android:layout_gravity="center_horizontal"
            />

    </LinearLayout>

    </ScrollView>

</LinearLayout>